Updated the home and postage copy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,19 +37,19 @@
     </p>
 
     <p>
-      26 designers are currently working to create the inaugural Letterspace alphabet informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented at <a href="https://www.eventbrite.co.uk/e/thursday-lates-letterspace-tickets-41997052314" target="_blank">The Whitworth on 19th April 2018</a>.
+      26 designers created the inaugural Letterspace alphabet in 2018 informed by each of their own spaces throughout the UK, America, Canada, Europe and the Middle East. The alphabet was first presented at The Whitworth as part of their Thursday Lates programme</a>.
     </p>
 
     <p>
-      The alphabet will form the basis of a workshop day for 40 Key Stage 3 students from schools in the Manchester area, with the aim of inspiring the next generation to study art and design at a higher level.
+      The alphabet also formed the basis of a workshop day for 26 Key Stage 3 students from schools in the Manchester area, with the aim of inspiring the next generation to study art and design at a higher level.
     </p>
 
     <p>
-      Each of the 26 letters will be screen printed as a limited edition of 26 by <a href="http://www.danmatherscreenprint.co.uk" target="_blank">Dan Mather Screenprint</a> in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>, in partnership with Debbie Wigglesworth of The Paper Collaborative.
+      Each of the 26 letters are available to buy in a limited edition of 26, screen printed by <a href="http://www.danmatherscreenprint.co.uk" target="_blank">Dan Mather Screenprint</a> in London, with each designer having selected a bespoke ink and paper. This has been made possible by the kind and generous support of <a href="http://www.slater-harrison.co.uk" target="_blank">Slater Harrison</a>, in partnership with Debbie Wigglesworth of The Paper Collaborative.
     </p>
 
     <p>
-      In addition, a full Letterspace alphabet, made up of 26 posters, will be auctioned at The Whitworth, with proceeds gifted to two charities; <a href="http://www.mustardtree.org.uk" target="_blank">Mustard Tree</a> in Manchester and <a href="http://www.printedbyus.org" target="_blank">Printed by Us</a> in Sheffield. Remaining posters will be available to buy at The Whitworth event and online.
+      In addition, a full Letterspace alphabet, made up of 26 posters, was auctioned at The Whitworth, with proceeds gifted to two charities; <a href="http://www.mustardtree.org.uk" target="_blank">Mustard Tree</a> in Manchester and <a href="http://www.printedbyus.org" target="_blank">Printed by Us</a> in Sheffield.
     </p>
 
     <p>
