--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -96,7 +96,23 @@
 
     <h3>Postage, Packaging & Delivery</h3>
     <p>
-      The posters will be packed in pristine condition, within acid-free tissue paper, in a very strong A2 mailer. They will be sent 1st Class via Royal Mail. We will endeavour to post your poster at the earliest, however, please allow up to 21 working days for delivery.
+      The posters are packed within acid-free tissue paper, in a very strong A2 mailer as they can’t be rolled due to the weight of the paper and nature of the print.
+    </p>
+
+    <p>
+      The mailer is too large for Royal Mail’s standard parcel service and I therefore use MyHermes to keep the cost as low as possible. I don’t make any money on the P+P charge. The full cost including the mailer is £8.
+    </p>
+
+    <p>
+      Due to the size of the mailer, international delivery must be priced individually. Please contact me on lucy@lucybrownstudio.com to enquire.
+    </p>
+      
+    <p>
+      If you would prefer to collect in person from Manchester or Macclesfield, I will refund the P+P charge to you via PayPal - please email me on lucy@lucybrownstudio.com to let me know.
+    </p>
+
+    <p>
+      I will endeavour to post your poster at the earliest, however, please allow up to 21 working days for delivery.
     </p>
 
     <h3>Print Quality</h3>
