Changed email contact details

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,7 +103,7 @@
 
             <div class="grid_6 alpha">
               <ul>
-                <li class="hello">hello@letterspace.co.uk</li>
+                <li class="hello">hello@lucybiggs.com</li>
               </ul>
             </div>
 
