--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -7,7 +7,7 @@
 
     <ul>
       <li>Contact Lucy on:</li>
-      <li><a href="mailto:hello@letterpace.co.uk">hello@letterspace.co.uk</a></li>
+      <li><a href="mailto:hello@lucybiggs.com">hello@lucybiggs.com</a></li>
       <li>+44 (0)7701008030</li>
       <li><a href="http://www.instagram.com/letterspace_" target="_blank">@letterspace_</a></li>
     </ul>
