--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
 
     <div id="wrapper">
 
+      <% if @page != "show" %>
       <div id="header" class="grid_12">
         <div class="logobg">
           <div class="centered">
@@ -34,6 +35,7 @@
           </div>
         </div>
       </div>
+      <% end %>
 
       <nav class="grid_12">
 
